Fix XBL extension of XHTML namespaced nodes.  Bug 176606, patch by hyatt, r=jst, sr=bzbarsky